--- a/unidade4/src/components/produto/style.css
+++ b/unidade4/src/components/produto/style.css
@@ -2,5 +2,13 @@
     padding: 30px;
     border: 1px solid lightgray;
     border-radius: 20px;
+    align-items: center;
+    justify-content: center;
     margin: 10px;
+    width: 300px;
+    height: 300px;
+}
+
+.container_produto_card img {
+    max-height: 200px;
 }
