menu lateral com as categorias do produto

--- a/unidade4/src/pages/detalheproduto/index.css
+++ b/unidade4/src/pages/detalheproduto/index.css
@@ -17,7 +17,7 @@
 .container_detalhe_produto button {
     margin-top: 20px;
     padding: 10px 50px;
-    background-color: #57c9ae;
+    background-color: #cacade;
     border: none;
     border-radius: 5px;
     cursor: pointer;
